# b-tree_Database

./: .gitignore  ISSUES_NOTES.txt  POINT0_IDEAL_TODO.md  b_tree_functions_summary.txt  coursework_plan.txt
dbms/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
dbms/data/: btree_index_test.idx  btree_index_test1.idx  btree_index_test2.idx  btree_index_test3.idx  btree_index_test4.idx  btree_index_test5.idx  sample.tbl
dbms/include/dbms/: all.h
dbms/include/dbms/core/: catalog.h  database.h  dbms.h  schema.h  table.h
dbms/include/dbms/grpc/: access_logger.h  sql_service_impl.h  telemetry.h
dbms/include/dbms/index/: b_tree_disk_index.h  index_manager.h  index_page_manager.h  string_key.h
dbms/include/dbms/sql/: cli.h  executor.h  lexer.h  parser.h  sql_api.h  statements.h  token.h
dbms/include/dbms/storage/: page.h  record.h  record_codec.h  storage_format.h  table_page_manager.h  table_storage.h
dbms/proto/: sql_service.proto
dbms/scripts/: demo_constraints_errors.sql  demo_grpc.sql  demo_point0.sql  demo_restart_check.sql  demo_restart_seed.sql
dbms/src/: main.cpp
dbms/src/grpc/: access_logger.cpp  grpc_client_main.cpp  grpc_server_main.cpp  sql_service_impl.cpp  telemetry.cpp
dbms/src/sql/: cli.cpp  executor.cpp  lexer.cpp  parser.cpp  sql_api.cpp
dbms/tests/: b_tree_tests.cpp  grpc_smoke_test.sh
dbms/tests/spec/: all_tests.cpp
dbms/tests/sql/: cli_script_tests.cpp  executor_tests.cpp  lexer_tests.cpp  parser_tests.cpp
for submitting/: 1.txt
theory/: POINT0_IDEAL_TODO.md  README.md  docker_usage.txt  idx_layout.txt  statements_explanation.md
theory/zapiska/: build_zapiska.py  poyasnitelnaya_zapiska.docx
